# industrial-vision-starter

./: .gitignore  README.md
industrial-vision-starter/: Makefile  pyproject.toml  requirements.txt
industrial-vision-starter/src/ivs/: cli.py  data_synth.py  dataset.py  export_onnx.py  infer.py  train.py
src/ivs/: model_unet.py  utils.py
tests/: test_smoke.py
